--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,13 @@ p {
     margin: 0;
     padding: 0;
 }
+
 ul {
     margin: 0;
     padding-left: 0;
     list-style-type: none;
 }
+
 img {
     display: block;
     max-width: 100%;
@@ -23,6 +25,7 @@ body {
     color: #434455;
     background-color: #FFFFFF;
 }
+
 .container {
     max-width: 1158px;
     padding-left: 15px;
@@ -30,16 +33,45 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-header nav {
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-} 
-header ul {
-    display: flex;
-    gap: 20px;
+    width: 100%;
 }
+
+.nav {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+    gap: 40px;
+}
+
+.nav-link {
+    padding: 24px 0;
+    display: inline-block;
+    color: #2e2f42;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+    color: #404bbf;
+}
+
 .logo-main {
+    margin-right: 76px;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -53,24 +85,13 @@ header ul {
     color: #2e2f42;
 }
 
-.nav-link {
-    padding: 20px 10px;
-    display: inline-block;
-    color: #2e2f42;
-    display: inline-block;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-    color: #404bbf;
-}
-
 .contact-info {
     font-style: normal;
+}
+
+.contact-list {
+    display: flex;
+    gap: 40px;
 }
 
 .contact-link {
@@ -84,27 +105,32 @@ header ul {
 .contact-link:focus {
     color: #404bbf;
 }
+
 .section {
     width: 100%;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
+
 .first-section {
     background-color: #2e2f42;
     text-align: center;
+    color: white;
 }
 
-.header {
+.main-header {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    text-align: center;
-    color: #ffffff;
     margin-bottom: 20px;
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .cta-button {
+    display: block;
     background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
@@ -113,9 +139,12 @@ header ul {
     color: #ffffff;
     cursor: pointer;
     border: none;
-        padding: 16px 32px;
-        border-radius: 4px;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding: 16px 32px;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
 }
 
 .cta-button:hover,
@@ -134,6 +163,22 @@ header ul {
     margin-bottom: 60px;
 }
 
+.features-list,
+.team-list,
+.portfolio-list {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.feature-item,
+.portfolio-item,
+.team-member {
+    flex: 1 1 calc((100% - 72px) / 4);
+    text-align: center;
+}
+
 .feature-title,
 .portfolio-title {
     font-weight: 500;
@@ -141,7 +186,7 @@ header ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
 .feature-description,
@@ -152,33 +197,20 @@ header ul {
     color: #434455;
 }
 
-.team-section {
-    background-color: #F4F4FD;
-}
-.team-section ul {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    flex-wrap: wrap;
-}
 .team-member {
     background-color: #FFFFFF;
     text-align: center;
     padding: 16px;
-        border-radius: 4px;
-        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.1);
-        flex: 1 1 calc((100% - 3 * 20px) / 4);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 8px;
+    border-radius: 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.1);
 }
+
 .team-member img {
     width: 100%;
     height: auto;
     border-radius: 4px 4px 0 0;
 }
+
 .team-member-name {
     font-weight: 500;
     font-size: 20px;
@@ -197,58 +229,45 @@ header ul {
     color: #434455;
     margin-top: 5px;
 }
-.portfolio-section ul {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-}
-.portfolio-section li {
-    width: calc((100% - 3 * 20px) / 4);
-    margin-bottom: 20px;
+
+.portfolio-item {
     padding: 16px;
     border: 1px solid #e7e9fc;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 8px;
     box-shadow: 0 2px 1px rgba(46, 47, 66, 0.1);
 }
-.portfolio-section li img {
+
+.portfolio-item img {
     width: 100%;
     height: auto;
     border-radius: 4px 4px 0 0;
 }
-.portfolio-title {
-    margin-top: 8px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
 
-.portfolio-category {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
 .footer {
     background-color: #2e2f42;
     text-align: center;
-    padding: 20px 0;
+    color: #f4f4fd;
+    padding: 100px 0;
     width: 100%;
+}
+
+.footer .container {
+    max-width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.logo-main {
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .logo-part-footer {
     color: #f4f4fd;
 }
+
 .footer-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    margin-top: 10px;
 }
