--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ body {
     background-color: #2e2f42;
     text-align: center;
     color: white;
+    padding: 188px 0;
 }
 
 .main-header {
@@ -204,7 +205,9 @@ body {
     border-radius: 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.1);
 }
-
+.team-section {
+    padding: 120px 0;
+}
 .team-member img {
     width: 100%;
     height: auto;
@@ -232,6 +235,7 @@ body {
 }
 
 .portfolio-item {
+    width: calc((100% - 48px) / 3);
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     box-shadow: 0 2px 1px rgba(46, 47, 66, 0.1);
@@ -247,6 +251,16 @@ body {
 }
 .portfolio-title {
     margin-bottom: 8px;
+}
+.portfolio-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 .footer {
     background-color: #2e2f42;
