--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,10 @@ body {
 .team-member img {
     width: 100%;
     height: auto;
-    border-radius: 4px 4px 0 0;
+border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 
 .team-member-name {
@@ -291,6 +294,7 @@ body {
 
 .portfolio-padding {
     padding: 32px 16px;
+    border: 1px solid #e7e9fc;
 }
 
 .portfolio-margin {
