--- a/css/styles.css
+++ b/css/styles.css
@@ -213,8 +213,8 @@ body {
     text-align: center;
     background-color: #FFFFFF;
     padding: 16px;
-    border-radius: 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.1);
+    border-radius: 0px 0px 4px 4px
 }
 .team-member-info {
     padding: 32px 0;
@@ -297,6 +297,7 @@ border-top-left-radius: 0px;
 .portfolio-padding {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-margin {
