--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,9 @@ img {
     display: block;
     max-width: 100%;
 }
-
+a {
+    text-decoration: none;
+}
 body {
     font-family: "Roboto", sans-serif;
     color: #434455;
@@ -124,7 +126,7 @@ body {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    margin-bottom: 20px;
+    margin-bottom: 48px;
     max-width: 496px;
     margin-left: auto;
     margin-right: auto;
@@ -183,7 +185,6 @@ body {
 }
 .feature-item {
     flex: 1 1 calc((100% - 72px) / 4);
-    text-align: center;
 }
 .feature-title {
     font-weight: 500;
@@ -201,6 +202,7 @@ body {
 }
 .team-section {
     padding: 120px 0;
+    background: #f4f4fd;
 }
 .team-list {
     display: flex;
@@ -212,7 +214,6 @@ body {
     flex: 1 1 calc((100% - 72px) / 4);
     text-align: center;
     background-color: #FFFFFF;
-    padding: 16px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.1);
     border-radius: 0px 0px 4px 4px
 }
@@ -270,10 +271,6 @@ border-top-left-radius: 0px;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    box-shadow: 0 2px 1px rgba(46, 47, 66, 0.1);
-    border-top: none;
 }
 
 .portfolio-item-info {
@@ -312,23 +309,14 @@ border-top-left-radius: 0px;
 }
 .footer {
     background-color: #2e2f42;
-    text-align: center;
     color: #f4f4fd;
     padding: 100px 0;
-    width: 100%;
 }
 
-.footer .container {
-    max-width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
-
-.logo-main {
+.logo-main-footer {
     margin-bottom: 16px;
-    display: inline-block;
+    display: inline-block;   
 }
-
 .logo-part-footer {
     color: #f4f4fd;
 }
@@ -338,4 +326,5 @@ border-top-left-radius: 0px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    width: 264px;
 }
